src/objects/Target_goals_for_Sales_Person__c.object
<CustomObject>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Target goals for Sales Person</relationshipLabel>
        <relationshipName>Target_goals_for_Sales_Person</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Target_goals_for_Sales_Person</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Goal__c</fullName>
        <label>Target Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Date</type>
    </fields>
    <label>Target goals for Sales Person</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target goals for Sales Person</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>